chenge theme button into fixed and fix navbar alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,13 +8,13 @@
 }
 
 .nav {
+  background-color: var(--primary-color);
   margin: 0 auto;
-  width: 92vw;
+  width: 100%;
   height: 4vw;
   max-width: 2400px;
   display: flex;
   justify-content: space-between;
-  position: fixed;
 }
 
 .brand {
@@ -38,7 +38,9 @@
   font-size: 1.25vw;
   width: 2vw;
   height: 2vw;
-  margin: auto;
+  margin: 1vw 0;
+  position: fixed;
+  right: 4vw;
   border-radius: 0.25vw;
   align-items: center;
   transition: filter 0.3s;
